--- a/scripts/catalog_fits.ipynb
+++ b/scripts/catalog_fits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,22 +21,22 @@
     "from astropy.io import fits\n",
     "import numpy.polynomial.polynomial as poly\n",
     "import matplotlib.pyplot as plt\n",
-    "import plotly.graph_objects as go\n",
+    "# import plotly.graph_objects as go\n",
     "import pandas as pd\n",
     "import psutil\n",
-    "import erfa\n",
+    "# import erfa\n",
     "import csv\n",
     "sm = SkyModel()\n",
     "\n",
-    "ruby_catalog = sm.from_fhd_catalog(\"/Users/Kiana1/uwradcos/FHD/catalog_data/GLEAM_v2_plus_rlb2019.sav\",\n",
+    "ruby_catalog = sm.from_fhd_catalog(\"/lustre/aoc/projects/hera/dstorer/Setup/FHD/catalog_data/GLEAM_v2_plus_rlb2019.sav\",\n",
     "                                  expand_extended = True)\n",
-    "gleam_catalog = sm.from_gleam_catalog(\"/Users/Kiana1/uwradcos/gleam.vot\", spectral_type = \"subband\", with_error = True)\n",
-    "gleam_spectral_index = sm.from_gleam_catalog(\"/Users/Kiana1/uwradcos/gleam.vot\", spectral_type = \"spectral_index\", with_error = True)"
+    "gleam_catalog = sm.from_gleam_catalog(\"/lustre/aoc/projects/hera/dstorer/gleam.vot\", spectral_type = \"subband\", with_error = True)\n",
+    "gleam_spectral_index = sm.from_gleam_catalog(\"/lustre/aoc/projects/hera/dstorer/gleam.vot\", spectral_type = \"spectral_index\", with_error = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -756,9 +756,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 862,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving to /lustre/aoc/projects/hera/dstorer/Setup/GleamPlusFullSpectrum/\n",
+      "Saving to /lustre/aoc/projects/hera/dstorer/Setup/GleamPlusFullSpectrum/\n",
+      "Saving to /lustre/aoc/projects/hera/dstorer/Setup/GleamPlusFullSpectrum/\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.gridspec as gridspec\n",
     "from matplotlib.lines import Line2D\n",
@@ -766,6 +778,7 @@
     "\n",
     "def grouper(n, iterable):\n",
     "    args = [iter(iterable)] * n\n",
+    "#     print(args)\n",
     "    return ([e for e in t if e != None] for t in itertools.zip_longest(*args))\n",
     "\n",
     "# Plot fits that have more than one fit attempt\n",
@@ -796,25 +809,14 @@
     "        page = int(max(j) / 9)\n",
     "        nsources = max(j)+1 / (page + 1)\n",
     "\n",
-    "        fig = plt.figure(figsize=(20,8*nsources//3))\n",
-    "        nrows = int(np.ceil(nsources/3))\n",
+    "        fig = plt.figure(figsize=(20,24))\n",
+    "        nrows = 3\n",
     "        gs = gridspec.GridSpec(3*nrows, 3, height_ratios=np.tile([1,0.4,0.25],nrows))\n",
     "        plt.subplots_adjust(hspace=.0)\n",
     "        \n",
-    "        \n",
-    "        #page = int(max(j) / 9)\n",
-    "        \n",
-    "        #fig = plt.figure(figsize=(20,8*9//3))\n",
-    "        #nrows = int(np.ceil(9/3))\n",
-    "        #gs = gridspec.GridSpec(3*nrows, 3, height_ratios=np.tile([1,0.4,0.25],nrows))\n",
-    "        #plt.subplots_adjust(hspace=.0)\n",
-    "        \n",
-    "        #elements = []\n",
-    "        for i in j:\n",
-    "            page_idx = int(i - (9*page))\n",
-    "            fit = plt.subplot(gs[(page_idx//3)*nsources + page_idx%3])\n",
-    "            #print(gs[(i//3)*9 + i%3])\n",
-    "\n",
+    "        for page_idx,i in enumerate(j):\n",
+    "            fit = plt.subplot(gs[int((page_idx//3)*9 + page_idx%3)])\n",
+    "            \n",
     "            source_num = ordered_power[i][1]\n",
     "            freqs = source_dict[source_num]['freqs'] / 1000000\n",
     "\n",
@@ -895,13 +897,12 @@
     "            fit.set_ylim([np.nanmin(gleam_catalog.stokes.value[0,:,source_num])*.9, np.nanmax(gleam_catalog.stokes.value[0,:,source_num]) * 1.2])\n",
     "\n",
     "\n",
-    "            #fit.set_title(i)\n",
     "            fit.set_xticks([])\n",
-    "            resid = plt.subplot(gs[(i//3)*9 + i%3 + 3])\n",
+    "            resid = plt.subplot(gs[int((page_idx//3)*9 + page_idx%3 + 3)])\n",
+    "            \n",
     "            res = resid.scatter(freqs, residual, marker = \"P\", color = '#e41a1c', label = \"residual\")\n",
     "            elements.append(Line2D([0], [0], marker = \"P\", color = '#e41a1c', label = \"residual\"))\n",
     "\n",
-    "        #print(elements)\n",
     "        fig.legend(handles = elements,   # The line objects\n",
     "               loc=\"center right\",   # Position of legend\n",
     "               borderaxespad=0.1,    # Small spacing around legend box\n",
@@ -911,72 +912,19 @@
     "        fig.text(0.08, 0.5, 'Flux (Jy)', va='center', rotation='vertical', fontsize = 12)\n",
     "        fig.text(.35, .9, \"Source fits that required multiple fits, brightest to dimmest, excluding <100mJ\", fontsize = 14)\n",
     "        if savefig == True:\n",
+    "            print(f'Saving to {saveloc}')\n",
     "            plt.savefig(saveloc + str(page) + '.jpg', format = 'jpg')\n",
     "        plt.close()\n",
     "        \n",
     "plotFits(gleam_catalog, source_dict, savefig=True, Nsources=20,\n",
-    "             saveloc=\"/Users/Kiana1/uwradcos/plots/source_fits_bright_to_dim\")"
+    "             saveloc=\"/lustre/aoc/projects/hera/dstorer/Setup/GleamPlusFullSpectrum/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 861,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[0:1, 0:1]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[0:1, 1:2]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[0:1, 2:3]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[3:4, 0:1]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[3:4, 1:2]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[3:4, 2:3]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[6:7, 0:1]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[6:7, 1:2]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[6:7, 2:3]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[0:1, 0:1]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[0:1, 1:2]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[0:1, 2:3]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[3:4, 0:1]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[3:4, 1:2]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[3:4, 2:3]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[6:7, 0:1]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[6:7, 1:2]\n",
-      "GridSpec(9, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[6:7, 2:3]\n",
-      "GridSpec(6, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[0:1, 0:1]\n",
-      "GridSpec(6, 3, height_ratios=array([1.  , 0.4 , 0.25, 1.  , 0.4 , 0.25]))[0:1, 1:2]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1440x1728 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1440x1728 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1440x1152 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Nsources = 20\n",
     "grouped_sources = grouper(9, range(Nsources))\n",
@@ -2365,9 +2313,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "hera",
    "language": "python",
-   "name": "python3"
+   "name": "hera"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2379,7 +2327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
