--- a/scripts/catalog_fits.ipynb
+++ b/scripts/catalog_fits.ipynb
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 862,
+   "execution_count": 865,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +812,7 @@
     "        #elements = []\n",
     "        for i in j:\n",
     "            page_idx = int(i - (9*page))\n",
-    "            fit = plt.subplot(gs[(page_idx//3)*nsources + page_idx%3])\n",
+    "            fit = plt.subplot(gs[(page_idx//3)*9 + page_idx%3])\n",
     "            #print(gs[(i//3)*9 + i%3])\n",
     "\n",
     "            source_num = ordered_power[i][1]\n",
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 861,
+   "execution_count": 866,
    "metadata": {},
    "outputs": [
     {
