--- a/scripts/catalog_fits.ipynb
+++ b/scripts/catalog_fits.ipynb
@@ -8,14 +8,13 @@
    "source": [
     "from pyradiosky import SkyModel, utils\n",
     "import numpy as np\n",
-    "from astropy.table import Table, setdiff, QTable\n",
+    "from astropy.table import Table, setdiff\n",
     "from astropy.utils.diff import report_diff_values\n",
     "from astropy.io import fits\n",
     "from operator import itemgetter\n",
     "import numpy.polynomial.polynomial as poly\n",
     "import matplotlib.pyplot as plt\n",
     "import plotly.graph_objects as go\n",
-    "import pandas as pd\n",
     "import psutil\n",
     "import erfa\n",
     "import csv\n",
@@ -43,7 +42,8 @@
    "source": [
     "def log_linear_fit(freqs, fit_data, stokes_error, dec, detect_outlier = False):\n",
     "    ## Compute combined error, fit logged data to linear polynomial, calculate chi2 residual\n",
-    "    # Calculate coord-based portion of error\n",
+    "    \n",
+    "    # Calculate sky coordinate-based portion of error\n",
     "    if (dec >= 18.5) or (dec <= -72):\n",
     "        loc_error = fit_data * .03\n",
     "    else:\n",
@@ -53,7 +53,7 @@
     "    total_error = np.sqrt(loc_error**2 + stokes_error**2)\n",
     "    weight = np.log10(1 / total_error)\n",
     "    \n",
-    "    # Take logs of data and freqs for polyfit\n",
+    "    # Convert data into log scale for polyfit\n",
     "    fit_data_log = np.log10(fit_data)\n",
     "    freqs_log = np.log10(freqs)\n",
     "    all_freqs_log = np.log10(gleam_catalog.freq_array.value)\n",
