cleaned up comments

--- a/scripts/catalog_fits.ipynb
+++ b/scripts/catalog_fits.ipynb
@@ -132,28 +132,27 @@
     "# Initialize arrays and lists and stuff\n",
     "source_dict = {}\n",
     "bad_chi2 = []\n",
-    "averages = []\n",
     "fit_averages = []\n",
     "problem_objs = []\n",
     "\n",
     "\n",
     "# Separate all rows that contain nans\n",
     "for source in np.arange(gleam_catalog.Ncomponents):\n",
-    "#for source in np.arange(10):\n",
     "    fit_data = gleam_catalog.stokes.value[0,:,source]\n",
     "    dec = gleam_catalog.dec.value[source]\n",
     "    freqs = gleam_catalog.freq_array.value\n",
     "    stokes_error = gleam_catalog.stokes_error.value[0,:,source]\n",
     "    \n",
+    "    # Calculate variance for final output\n",
     "    mean_adj_data = (fit_data - np.nanmean(fit_data)) / np.nanmean(fit_data)\n",
     "    diff = np.diff(mean_adj_data)\n",
     "    variance = np.nanvar(diff)\n",
     "    \n",
-    "    averages.append(np.average(fit_data))\n",
+    "    #Initialize arrays for half and quarter fits\n",
     "    out2 = np.array([[float(\"NaN\")], [float(\"NaN\")], [float(\"NaN\")], [float(\"NaN\")]])\n",
     "    out3 = np.array([[float(\"NaN\")], [float(\"NaN\")], [float(\"NaN\")], [float(\"NaN\")]])\n",
     "\n",
-    "    ### find sources that have missing values in only one of error and vals ###\n",
+    "    # Find sources that have missing values in only one of error and vals\n",
     "    source_probs = []\n",
     "    for i in range(len(fit_data)):\n",
     "        if np.isnan(fit_data[i]):\n",
@@ -163,38 +162,41 @@
     "            if np.isnan(stokes_error[i]) and not source_probs:\n",
     "                source_probs.append([fit_data, stokes_error])\n",
     "          \n",
-    "    # only include in problems list if there WAS a problem, exclude from rest of fit\n",
+    "    # Only include in problems list if there WAS a problem, exclude source from rest of fitting\n",
     "    if source_probs:\n",
     "        problem_objs.append([source, gleam_catalog.ra.value[source], gleam_catalog.dec.value[source], source_probs])\n",
     "        continue\n",
     "    \n",
-    "    ### remove negative data by turning into nans before fitting ###\n",
+    "    # Eliminate negative fluxes by turning into nans before fitting\n",
     "    fit_data[fit_data < 0] = np.nan\n",
     "    indices = np.argwhere(~np.isnan(fit_data)).flatten()\n",
     "    \n",
+    "    # Skip sources with no values\n",
     "    if np.all(np.isnan(fit_data)):\n",
     "        continue\n",
     "\n",
     "        \n",
-    "    # Perform full fit using all freqs available\n",
+    "    # Perform full fit using all freqs available for source\n",
     "    out1 = log_linear_fit(freqs, fit_data, stokes_error, dec, detect_outlier = True)\n",
     "    out = out1\n",
     "    \n",
-    "    # if chi2_residual is >=1.93 and brighter than 1 at 150, fit again with fewer freqs\n",
+    "    # if chi2_residual is >=1.93 and brighter than 1Jy at 150MHz, fit again with fewer freqs\n",
     "    if out[1] >= 1.93:\n",
     "        if fit_data[9]>1:\n",
-    "\n",
+    "            \n",
+    "            # Fit with bottom half of freqs\n",
     "            if len(fit_data[indices]) >= 8:\n",
     "                half_freqs = freqs[indices[:int(len(indices) / 2)]]\n",
     "                fit_data_half = fit_data[indices[:int(len(indices) / 2)]]\n",
     "                error_half = stokes_error[indices[:int(len(indices) / 2)]]\n",
-    "\n",
+    "                \n",
+    "                # Fit with bottom half of freqs\n",
     "                out2 = log_linear_fit(half_freqs, fit_data_half, error_half, dec)\n",
     "                out = out2\n",
     "\n",
-    "                # if second fit isn't good try again\n",
+    "                # if 2nd fit has poor chi2, fit with bottom 1/4 freqs\n",
     "                if out[1] >= 1.93:\n",
-    "                    # If 8+ freqs remain after halving, fit on bottom 1/4\n",
+    "                    # If original freqs >=16, fit on bottom 1/4\n",
     "                    if len(half_freqs) >= 8:\n",
     "                        qt_freqs = half_freqs[:int(len(half_freqs) / 2)]\n",
     "                        fit_data_qt = fit_data_half[:int(len(half_freqs) / 2)]\n",
@@ -203,7 +205,7 @@
     "                        out3 = log_linear_fit(qt_freqs, fit_data_qt, error_qt, dec)\n",
     "                        out = out3\n",
     "\n",
-    "                    # If there are <8 total non-nan frequencies, fit on bottom 4\n",
+    "                    # If there are <16 total non-nan frequencies, fit on bottom 4\n",
     "                    else:\n",
     "                        bottom_freqs = freqs[indices[:4]]\n",
     "                        fit_data_bottom = fit_data[indices[:4]]\n",
@@ -213,11 +215,12 @@
     "                        out = out3\n",
     "\n",
     "            else:\n",
-    "                # run fit on bottom 4 non-nan-value frequencies if <8 total non-nan-value freqs\n",
+    "                # If bottom half of freqs is small, run fit on bottom 4 freqs, and do not attempt 3rd fit\n",
     "                bottom_freqs = freqs[indices[:4]]\n",
     "                fit_data_bottom = fit_data[indices[:4]]\n",
     "                error_bottom = stokes_error[indices[:4]]\n",
-    "\n",
+    "                \n",
+    "                # Fit with bottom half of freqs\n",
     "                out2 = log_linear_fit(bottom_freqs, fit_data_bottom, error_bottom, dec)\n",
     "                out = out2\n",
     "\n",
@@ -233,6 +236,7 @@
     "\n",
     "    \n",
     "    fit_averages.append(np.average(out[3]))\n",
+    "    \n",
     "    # These are the things contained in out1, out2, out3:\n",
     "    # coeffs, chi2_residual, fitted_data, all_freqs_fitted_data, fitted_freqs,\n",
     "    # fit_data_selected, original_parameters, low_fit\n",
@@ -383,7 +387,7 @@
     "plt.hist2d(midband, diff, bins = 100, norm=LogNorm(), range = [[0,5],[-16,16]])\n",
     "plt.xlabel(\"150 Mhz brightness\")\n",
     "plt.ylabel(\"Spectral index [last-first]\")\n",
-    "plt.title(\"150 Mhz brightness vs Spectral Index Diff, multifits only\")\n",
+    "plt.title(\"150 Mhz flux vs Spectral Index Diff, multifits only\")\n",
     "#plt.savefig(\"/Users/Kiana1/uwradcos/plots/chi2_variance_hist2d_new.png\")"
    ]
   },
